--- a/src/SPCoder.SharePoint.Client/packages.config
+++ b/src/SPCoder.SharePoint.Client/packages.config
@@ -5,8 +5,13 @@
   <package id="Camlex.Client.dll" version="4.0.0" targetFramework="net47" />
   <package id="EPPlus" version="4.5.3.2" targetFramework="net47" />
   <package id="log4net" version="2.0.8" targetFramework="net47" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.8" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebHelpers" version="3.2.8" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.8" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.2.8" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.8" targetFramework="net47" />
   <package id="Microsoft.Azure.ActiveDirectory.GraphClient" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.8.4" targetFramework="net45" />
@@ -21,7 +26,8 @@
   <package id="Microsoft.IdentityModel.Logging" version="5.2.4" targetFramework="net45" requireReinstallation="true" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.2.4" targetFramework="net45" requireReinstallation="true" />
   <package id="Microsoft.Office.Client.Policy" version="15.0.0" targetFramework="net45" />
-  <package id="Microsoft.SharePointOnline.CSOM" version="16.1.20211.12000" targetFramework="net47" />
+  <package id="Microsoft.SharePointOnline.CSOM" version="16.1.22413.12000" targetFramework="net47" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net47" />
   <package id="SharePointPnP.IdentityModel.Extensions" version="1.2.4" targetFramework="net47" />
   <package id="SharePointPnPCoreOnline" version="3.23.2007" targetFramework="net47" />
