Working on PowerPlatform module. Implemented fetching of flows, showing them in Explorer window and viewing the json in Source window.

--- a/src/SPCoder.WinApp/packages.config
+++ b/src/SPCoder.WinApp/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="3.5.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Scripting.Common" version="3.5.0" targetFramework="net47" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net47" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net47" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
