--- a/src/SPCoder.PowerPlatform/packages.config
+++ b/src/SPCoder.PowerPlatform/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.NETCore.Targets" version="1.1.3" targetFramework="net47" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net47" />
+  <package id="Newtonsoft.Json.Schema" version="3.0.14" targetFramework="net47" />
   <package id="System.IO" version="4.3.0" targetFramework="net47" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net47" />
   <package id="System.Private.Uri" version="4.3.2" targetFramework="net47" />
