--- a/src/SPCoder.PowerPlatform/packages.config
+++ b/src/SPCoder.PowerPlatform/packages.config
@@ -5,18 +5,22 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebPages.Data" version="3.2.9" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.9" targetFramework="net47" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net47" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.19.8" targetFramework="net47" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.1" targetFramework="net47" />
   <package id="Microsoft.NETCore.Targets" version="1.1.3" targetFramework="net47" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net47" />
   <package id="Newtonsoft.Json.Schema" version="3.0.14" targetFramework="net47" />
+  <package id="Scriban.Signed" version="5.5.0" targetFramework="net47" />
   <package id="System.IO" version="4.3.0" targetFramework="net47" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net47" />
   <package id="System.Private.Uri" version="4.3.2" targetFramework="net47" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net47" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.0" targetFramework="net47" />
 </packages>
