Implemented functionality for adding all environments to the Explorer view.

--- a/src/SPCoder.PowerPlatform/App.config
+++ b/src/SPCoder.PowerPlatform/App.config
@@ -3,6 +3,22 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
     </startup>
+	<appSettings>
+				
+		<!-- PPClientId and PPRedirectUrl are values of Microsoft Samples App-->
+		<!-- You can replace those 2 values by the clientid/redirecturl of your own Azure registered app -->
+		<add key="PPClientId" value="51f81489-12ee-4a9e-aaae-a2591f45987d" />
+		<add key="PPRedirectUrl" value="app://58145B91-0C36-4500-8554-080854F2AC97" />
+		<add key="PPAuthUrl" value="https://login.microsoftonline.com/common" />
+
+		<add key="PPFlowApiUrl" value="https://service.flow.microsoft.com" />
+
+		<add key="PPFAzureManagementApiUrl" value="https://management.azure.com" />
+		<add key="PPFAzureManagementApiGetEnvironmentsEndpoint" value="https://management.azure.com/providers/Microsoft.ProcessSimple/environments?api-version=2016-11-01" />
+		
+		<!--add key="ClientId" value="XXXX" /-->
+		<!--add key="ClientSecret" value="XXXXX=" /-->
+	</appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
