--- a/src/SPCoder.PowerPlatform/SPCoder.PowerPlatform.csproj
+++ b/src/SPCoder.PowerPlatform/SPCoder.PowerPlatform.csproj
@@ -59,6 +59,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IdentityModel" />
@@ -120,9 +121,11 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Nodes\PPEnvironmentNode.cs" />
+    <Compile Include="Utils\Nodes\PPEnvironmentContainerNode.cs" />
     <Compile Include="Utils\Nodes\PPFlowContainerNode.cs" />
     <Compile Include="Utils\Nodes\PPFlowNode.cs" />
     <Compile Include="Utils\PPConnector.cs" />
+    <Compile Include="Utils\PPConstants.cs" />
     <Compile Include="Utils\PPFlowApiDetails.cs" />
     <Compile Include="Utils\PPModule.cs" />
     <Compile Include="Utils\PPFlowJsonEditedFile.cs" />
